Fix and update generated API client
