# generated/fiberplane_api/src/models/created_by.rs
@@ -1,0 +1,34 @@
+/*
+ * Fiberplane API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Serialize, Deserialize)]
+pub struct CreatedBy {
+    #[serde(rename = "name")]
+    pub name: String,
+    #[serde(rename = "type")]
+    pub _type: crate::models::UserType,
+    #[serde(rename = "proxy", skip_serializing_if = "Option::is_none")]
+    pub proxy: Option<Box<crate::models::ProxySummary>>,
+}
+
+impl CreatedBy {
+    pub fn new(name: String, _type: crate::models::UserType) -> CreatedBy {
+        CreatedBy {
+            name,
+            _type,
+            proxy: None,
+        }
+    }
+}
+
+
