# generated/fiberplane_api/src/models/divider_cell.rs
@@ -1,0 +1,34 @@
+/*
+ * Fiberplane API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Serialize, Deserialize)]
+pub struct DividerCell {
+    #[serde(rename = "type")]
+    pub _type: crate::models::CellType,
+    #[serde(rename = "id")]
+    pub id: String,
+    #[serde(rename = "readOnly", skip_serializing_if = "Option::is_none")]
+    pub read_only: Option<bool>,
+}
+
+impl DividerCell {
+    pub fn new(_type: crate::models::CellType, id: String) -> DividerCell {
+        DividerCell {
+            _type,
+            id,
+            read_only: None,
+        }
+    }
+}
+
+
