# generated/fiberplane_api/src/models/trigger.rs
@@ -1,0 +1,40 @@
+/*
+ * Fiberplane API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Serialize, Deserialize)]
+pub struct Trigger {
+    #[serde(rename = "id")]
+    pub id: String,
+    #[serde(rename = "url")]
+    pub url: String,
+    #[serde(rename = "triggerType")]
+    pub trigger_type: crate::models::TriggerType,
+    #[serde(rename = "createdAt")]
+    pub created_at: String,
+    #[serde(rename = "updatedAt")]
+    pub updated_at: String,
+}
+
+impl Trigger {
+    pub fn new(id: String, url: String, trigger_type: crate::models::TriggerType, created_at: String, updated_at: String) -> Trigger {
+        Trigger {
+            id,
+            url,
+            trigger_type,
+            created_at,
+            updated_at,
+        }
+    }
+}
+
+
